--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,8 +55,27 @@ button:focus, button:active {
     background: rgba(0, 0, 0, 0.1);
 }
 
-/* 회원가입, 로그인 page */
+/* main.html */
+.main-profile-wrapper {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+.main-profile-wrapper * {
+    font-family: sans-serif;
+}
+.main-profile-wrapper .account {
+    display: flex;
+    flex-direction: column;
+    margin-left: 8px;
+}
+.main-profile-wrapper .account span {
+    font-size: 14px;
+    color: white;
+    line-height: 1.2;
+}
 
+/* 회원가입, 로그인 page */
 .sign-up * {
     font-family: sans-serif;
 }
@@ -93,4 +112,122 @@ button:focus, button:active {
     width: 100%;
 }
 
+.sign-up-link {
+    display: flex;
+    margin-top: 16px;
+}
 
+.sign-up-link div:last-child {
+    margin-left: 8px;
+    color: var(--custom-primary);
+    cursor: pointer;
+}
+
+
+/* mypage.html */
+.profile-info {
+    display: flex;
+}
+
+.profile-info * {
+    font-family: sans-serif;
+}
+
+.profile-detail {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 30px;
+}
+.profile-detail .user-info-wrapper {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 16px;
+}
+.profile-detail .user-info-wrapper .user-id {
+    margin-left: 8px;
+    color: var(--gray400);
+    font-size: 14px;
+}
+
+.profile-detail .user-name {
+    font-size: 20px;
+}
+
+.profile-detail .user-name span {
+    font-size: 1rem;
+}
+
+.profile-img-wrapper {
+    width: 150px;
+    height: 150px;
+    border-radius: 10em;
+    overflow: hidden;
+    position: relative;
+    /*background: var(--gray100);*/
+    background-image: url("/static/img/basic-profile.png");
+    background-repeat: no-repeat;
+    background-size: 100px 100px;
+    background-position: center center;
+    background-color: #e4e6e7;
+}
+.profile-img-wrapper.small {
+    width: 30px;
+    height: 30px;
+}
+
+.profile-img {
+    border: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hover-element {
+    background: rgba(0, 0, 0, 0);
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.5s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.hover-element div {
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.hover-element:hover, .hover-element:focus {
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+.divider {
+    width: 100%;
+    height: 1px;
+    background-color: var(--gray300);
+    margin: 30px 0;
+}
+
+/* fileupload */
+#file-input {
+    display: none;
+}
+
+#file-save-btn {
+    display: none;
+}
