--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,6 @@
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <script type="text/javascript" src="../static/js/script.js"></script>
 
-
     <title>사전스터디 14팀 토이프로젝트</title>
 </head>
 <body>
@@ -45,16 +44,18 @@
                 <label for="user-id-login">아이디</label>
                 <input type="text" class="form-control" id="user-id-login" placeholder="아이디를 입력하세요">
             </div>
-        </form>
-            <form>
             <div class="form-group">
                 <label for="user-pw-login">비밀번호</label>
                 <input type="password" class="form-control" id="user-pw-login" placeholder="비밀번호를 입력하세요">
             </div>
         </form>
         <div class="sign-up-btn-group">
-            <button class="btn btn-default">취소</button>
-            <button class="btn btn-primary">로그인</button>
+            <button class="btn btn-default" onclick="location.href='/'">취소</button>
+            <button class="btn btn-primary" onclick="login()">로그인</button>
+        </div>
+        <div class="sign-up-link">
+            <div>회원이 아니신가요?</div>
+            <div onclick="location.href='/signup'">회원가입</div>
         </div>
     </div>
 </section>
