--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,7 +32,6 @@
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <script type="text/javascript" src="../static/js/script.js"></script>
 
-
     <title>사전스터디 14팀 토이프로젝트</title>
 </head>
 <body>
@@ -40,27 +39,24 @@
 <section class="sign-up">
     <div class="sign-up-wrapper">
         <div class="sign-up-title">회원가입</div>
-        <form>
-            <div class="form-group">
-                <label for="user-name-signup">이름</label>
-                <input type="text" class="form-control" id="user-name-signup" placeholder="이름을 입력하세요">
-            </div>
-        </form>
-        <form>
-            <div class="form-group">
-                <label for="user-id-signup">아이디</label>
+        <div class="form-group">
+            <label for="user-name-signup">이름</label>
+            <input type="text" class="form-control" id="user-name-signup" placeholder="이름을 입력하세요">
+        </div>
+        <div class="form-group">
+            <label for="user-id-signup">아이디</label>
+            <div style="display: flex">
                 <input type="text" class="form-control" id="user-id-signup" placeholder="아이디를 입력하세요">
+                <button id="double-check" class="btn btn-primary" onclick="doubleCheckId()" style="margin-left: 8px">중복확인</button>
             </div>
-        </form>
-            <form>
-            <div class="form-group">
-                <label for="user-pw-signup">비밀번호</label>
-                <input type="password" class="form-control" id="user-pw-signup" placeholder="비밀번호를 입력하세요">
-            </div>
-        </form>
+        </div>
+        <div class="form-group">
+            <label for="user-pw-signup">비밀번호</label>
+            <input type="password" class="form-control" id="user-pw-signup" placeholder="비밀번호를 입력하세요">
+        </div>
         <div class="sign-up-btn-group">
-            <button class="btn btn-default">취소</button>
-            <button class="btn btn-primary">가입</button>
+            <button class="btn btn-default" onclick="location.href='/login'">취소</button>
+            <button class="btn btn-primary" onclick="saveUser()">가입</button>
         </div>
     </div>
 </section>
