--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,23 @@
 {% extends 'index.html' %}
 {% block content %}
+<div class="my-2 px-4 menu-page">
+    <div class="wrapper">
+        <select class="form-select" name="menu" id="select-gu">
+            <option>지역선택</option>
+            <option>전체</option>
+            <option>동작구</option>
+            <option>강남구</option>
+            <option>강북구</option>
+            <option>도봉구</option>
+            <option>영등포구</option>
+        </select>
+        <input class="form-control" id="search-keyword"/>
+        <button class="btn btn-primary" onclick="search()">검색</button>
+    </div>
 
+    <div class="divider"></div>
 
-
+    <div id="menu-list">
+    </div>
+</div>
 {% endblock %}
