--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"-->
+    <!--          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"
           integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous"/>
@@ -32,38 +34,47 @@
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <script type="text/javascript" src="../static/js/script.js"></script>
     <!-- 카카오지도 api key  -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{CLIENT_ID}}&libraries=services"></script>
+    <script type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{CLIENT_ID}}&libraries=services"></script>
     <title>사전스터디 14팀 토이프로젝트</title>
 </head>
 <body>
-
-{% block content %}
-{% endblock %}
-
-<div class="wrap">
-    <div class="container">
-        <div class="row bg-dark justify-content-center py-1">
-            <div class="mx-2">
-                <button class="btn btn-dark" role="button" onclick="main()"><h1>메인페이지</h1></button>
+<div class="wrap nav-top">
+    <nav class="navbar navbar-dark bg-dark px-4">
+        <span class="navbar-brand click" onclick="location.href='/'">맛집 추천 사이트</span>
+        {% if login == False %}
+        <span id="login-btn" class="" onclick="handleClickLoginPage()">로그인</span>
+        {% else %}
+        <div class="main-profile-wrapper">
+            <div class="profile-img-wrapper small">
+                <img id="profile-img-small" class="profile-img" alt=""/>
             </div>
-            <div class="mx-2">
-                <button class="btn btn-dark" role="button" onclick="region()"><h1>지역별 맛집</h1></button>
-            </div>
-            <div class="mx-2">
-                <button class="btn btn-dark" role="button" onclick="menu()"><h1>메뉴별 맛집</h1></button>
-            </div>
-            <div class="mx-2">
-                <button class="btn btn-dark" role="button" onclick="review()"><h1>후 기</h1></button>
-            </div>
-            <div class="mx-2">
-                <button class="btn btn-dark" role="button" onclick="myPage()"><h1>마이페이지</h1></button>
+            <div class="account">
+                <span>{{ session['username']}}</span>
+                <span>ID: {{ session['userid']}}</span>
             </div>
         </div>
+        {% endif %}
+    </nav>
+</div>
+
+<div class="wrap overflow-y-auto body-wrapper">
+    {% block content %}
+    {% endblock %}
+</div>
+
+<div class="wrap nav-bottom bg-dark">
+    <div class="wrapper">
+        <button class="btn btn-dark" role="button" onclick="main()">메인페이지</button>
+        <button class="btn btn-dark" role="button" onclick="region()">지역별 맛집</button>
+        <button class="btn btn-dark" role="button" onclick="menu()">메뉴별 맛집</button>
+        <button class="btn btn-dark" role="button" onclick="review()">후 기</button>
+        <button class="btn btn-dark" role="button" onclick="myPage()">마이페이지</button>
     </div>
 </div>
 </body>
 <script>
-                // 카카오 지도 만들기
+    // 카카오 지도 만들기
     var mapContainer = document.getElementById('map'),
         // 지도를 표시할 div
         mapOption = {
