--- a/templates/main.html
+++ b/templates/main.html
@@ -1,66 +1,51 @@
 {% extends 'index.html' %}
 {% block content %}
 <div class="wrap">
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 pl-3"><h1>맛집 추천 사이트</h1></span>
-        {% if login == False %}
-        <span id="login-btn" class="navbar-brand mb-0 pl-3"><h1 onclick="handleClickLoginPage()">로그인</h1></span>
-        {% else %}
-        <div class="main-profile-wrapper">
-            <div class="profile-img-wrapper small">
-                <img id="profile-img" class="profile-img" alt=""/>
-            </div>
-            <div class="account">
-                <span>{{ session['username']}}</span>
-                <span>ID: {{ session['userid']}}</span>
-            </div>
-        </div>
-        {% endif %}
-    </nav>
-
-    <div class="my-2 px-4">
-        <span class="navbar-brand mb-0"><h2>-Random 추천</h2></span>
+    <div class="my-4 px-4">
+        <h5>-Random 추천</h5>
         <div class="card-group">
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="mb-2 px-4">
-        <span class="navbar-brand mb-0"><h2>-좋아요 순위</h2></span>
+    <div class="divider"></div>
+
+    <div class="my-4 px-4">
+        <h5>-좋아요 순위</h5>
         <div class="card-group">
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="#" class="card-title"><h2>가게명</h2></a>
+                    <a href="#" class="card-title"><h6>가게명</h6></a>
                 </div>
             </div>
 
