--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,11 @@ button:focus, button:active {
 .profile-img-wrapper.small {
     width: 30px;
     height: 30px;
+    background-image: url("/static/img/basic-profile.png");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center center;
+    background-color: #e4e6e7;
 }
 
 .profile-img {
