--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,7 +3,6 @@
 <div class="my-2 px-4 menu-page">
     <div class="wrapper">
         <select class="form-select" name="menu" id="select-gu">
-            <option>지역선택</option>
             <option>전체</option>
             <option>동작구</option>
             <option>강남구</option>
@@ -11,7 +10,7 @@
             <option>도봉구</option>
             <option>영등포구</option>
         </select>
-        <input class="form-control" id="search-keyword"/>
+        <input class="form-control" id="search-keyword" placeholder="검색어를 입력하세요."/>
         <button class="btn btn-primary" onclick="search()">검색</button>
     </div>
 
