--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -30,7 +30,8 @@
 
     <div class="divider"></div>
     <div class="my-favorite-list-wrapper">
-        <div>내가 좋아요한 맛집 리스트</div>
+        <div id="like-list">내가 좋아요한 맛집 리스트</div>
+
     </div>
 </div>
 {% endblock %}
