--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -30,7 +30,7 @@
 
     <div class="divider"></div>
     <div class="my-favorite-list-wrapper">
-        <div id="like-list">내가 좋아요한 맛집 리스트</div>
+        <div id="like-list" class="custom-list">내가 좋아요한 맛집 리스트</div>
 
     </div>
 </div>
