--- a/templates/main.html
+++ b/templates/main.html
@@ -29,26 +29,12 @@
 
     <div class="my-4 px-4">
         <h5>-좋아요 순위</h5>
-        <div class="card-group">
-            <div class="card">
-                <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title"><h6>가게명</h6></a>
-                </div>
+        <div class="horizontal-list custom-list">
+            <button class="arrow-btn left"><</button>
+            <div id="card-group" class="list-wrapper">
+                <!--좋아요 높은 순 리스트-->
             </div>
-            <div class="card">
-                <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title"><h6>가게명</h6></a>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top" src="../static/img/흑당이.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title"><h6>가게명</h6></a>
-                </div>
-            </div>
-
+            <button class="arrow-btn right">></button>
         </div>
     </div>
 </div>
