--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 <body>
 <div class="wrap nav-top">
     <nav class="navbar navbar-dark bg-dark px-4">
-        <span class="navbar-brand click" onclick="location.href='/'">맛집 추천 사이트</span>
+        <span class="navbar-brand click" onclick="location.href='/'">서울의 모든 맛집</span>
         {% if login == False %}
         <span id="login-btn" class="" onclick="handleClickLoginPage()">로그인</span>
         {% else %}
