Fix: env, dbcrawling, chromedriver 삭제, favicon 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,8 @@
     <!-- 카카오지도 api key  -->
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{CLIENT_ID}}&libraries=services"></script>
-    <title>사전스터디 14팀 토이프로젝트</title>
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <title>서울의 모든 맛집</title>
 </head>
 <body>
 <div class="wrap nav-top">
