--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
             <p class="text desc">서울의 모든 맛집은 여기에!</p>
         </div>
     </div>
-    <div class="my-4 px-4">
+    <div class="px-3 content-wrapper">
         <div class="content-header">
             <h5 class="title">랜덤 추천</h5>
             <div class="desc">맛집 목록을 랜덤하게 추천드려요!</div>
@@ -28,7 +28,7 @@
 
     <div class="divider"></div>
 
-    <div class="my-4 px-4">
+    <div class="px-3 content-wrapper">
         <div class="content-header">
             <h5 class="title">Best 12</h5>
             <div class="desc">'좋아요'가 가장 많은 Best 12 입니다!</div>
