Fix: 스타일 변경

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,6 +471,10 @@ button:focus, button:active {
     margin-top: 16px;
     align-items: center;
 }
+.menu-page #menu-list .menu-item .item-wrapper .like-btn img {
+    width: 25px;
+    height: 25px;
+}
 
 .menu-page #menu-list .menu-item .item-wrapper .like-btn .like-count {
     margin-right: 10px;
@@ -592,4 +596,8 @@ button:focus, button:active {
     margin-right: 10px;
     color: #e91550;
     font-size: 14px;
+}
+.horizontal-list .item .item-wrapper .like-btn img {
+    width: 25px;
+    height: 25px;
 }
