--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
     <div class="banner">
         <img src="/static/img/food.jpg"/>
         <div class="wrapper">
-            <p class="text title">"서울의 모든 맛집"</p>
+            <p class="text title">"서울의 맛"</p>
             <p class="text desc">서울의 모든 맛집은 여기에!</p>
         </div>
     </div>
