--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,13 @@
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{CLIENT_ID}}&libraries=services"></script>
     <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
-    <title>서울의 모든 맛집</title>
+    <title>서울의 맛</title>
 </head>
 <body>
 <div class="wrap nav-top">
-    <nav class="navbar navbar-dark bg-dark px-4">
-        <span class="navbar-brand click" onclick="location.href='/'">서울의 모든 맛집</span>
+    <nav class="navbar px-3">
+        <img src="/static/img/logo.png" class="logo"/>
+<!--        <span class="navbar-brand click" onclick="location.href='/'">서울의 모든 맛집</span>-->
         {% if login == False %}
         <span id="login-btn" class="" onclick="handleClickLoginPage()">로그인</span>
         {% else %}
@@ -80,7 +81,7 @@
         // 지도를 표시할 div
         mapOption = {
             center: new kakao.maps.LatLng(37.5642135, 127.0016985), // 지도의 중심좌표
-            level: 8 // 지도의 확대 레벨
+            level: 8 // 지도의 확대 레벨ㅁㄴ이ㅏ러ㅗ
         };
 
     // 지도를 표시할 div와 지도 옵션으로 지도를 생성합니다
