--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,7 @@ html {
 body {
     height: 100%;
     overflow: hidden;
+    background: var(--global-bg);
 }
 
 @media screen and (max-width: 800px) {
@@ -135,6 +136,9 @@ button:focus, button:active {
     left: 50%;
     top: 0;
     z-index: 10;
+    /*border-bottom: 2px solid var(--custom-secondary);*/
+    background: white;
+    box-shadow: 0 5px 5px -5px rgba(0,0,0,0.2);
 }
 
 .nav-top .logo {
@@ -143,6 +147,7 @@ button:focus, button:active {
 .nav-top .navbar {
     max-height: 60px;
     min-height: 60px;
+    /*box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);*/
 }
 .nav-top nav .navbar-brand {
     font-family: 'Dongle', sans-serif;
@@ -177,6 +182,7 @@ button:focus, button:active {
 .body-wrapper {
     margin: 60px auto 60px auto;
     height: calc(100% - 120px);
+    background: white;
 }
 
 #login-btn {
@@ -581,6 +587,9 @@ button:focus, button:active {
     border-radius: 10em;
     width: 30px;
     height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .horizontal-list .arrow-btn img {
