--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block content %}
-<div class="my-2 px-4">
+<div class="px-4" style="margin: 30px 0">
     <div class="profile-info">
         <div class="img-container">
             <div class="profile-img-wrapper">
