--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,7 @@ html {
 body {
     height: 100%;
     overflow: hidden;
+    background: var(--global-bg);
 }
 
 @media screen and (max-width: 800px) {
@@ -93,8 +94,8 @@ button:focus, button:active {
 }
 
 .overflow-y-auto::-webkit-scrollbar {
-            display: none;
-        }
+    display: none;
+}
 
 .click {
     cursor: pointer;
@@ -141,17 +142,19 @@ button:focus, button:active {
     z-index: 10;
     /*border-bottom: 2px solid var(--custom-secondary);*/
     background: white;
-    box-shadow: 0 5px 5px -5px rgba(0,0,0,0.2);
+    box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.2);
 }
 
 .nav-top .logo {
     width: 90px;
 }
+
 .nav-top .navbar {
     max-height: 60px;
     min-height: 60px;
     /*box-shadow: 0 0 5px 1px rgba(0,0,0,0.2);*/
 }
+
 .nav-top nav .navbar-brand {
     font-family: 'Dongle', sans-serif;
     font-size: 30px;
@@ -164,18 +167,37 @@ button:focus, button:active {
     transform: translateX(-50%);
     left: 50%;
     z-index: 10;
+    background: var(--gray800);
+    height: 60px;
 }
 
 .nav-bottom .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    padding: 8px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: inherit;
+    /*padding: 8px;*/
 }
-
-.nav-bottom .wrapper button {
-    font-family: 'Dongle', sans-serif;
-    line-height: 1;
-    font-size: 30px;
+.nav-bottom .wrapper button.btn {
+    height: inherit;
+    position: relative;
+}
+.nav-bottom .wrapper button.btn:after {
+    content: '';
+    display: inline-block;
+    width: 1px;
+    height: 20px;
+    background: var(--gray600);
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.nav-bottom .wrapper button.btn:last-child:after {
+    display: none;
+}
+.nav-bottom .wrapper button img {
+    width: 20px;
+    height: 20px;
 }
 
 .nav-bottom .wrapper div {
@@ -254,6 +276,7 @@ button:focus, button:active {
     /*color: white;*/
     line-height: 1.2;
 }
+
 .main-profile-wrapper .account span:last-child {
     font-size: 12px;
     color: var(--custom-secondary);
@@ -370,10 +393,13 @@ button:focus, button:active {
 }
 
 .profile-img {
-    border: 0;
-    width: 100%;
+    border: none;
+    /*width: 100%;*/
     height: 100%;
     object-fit: cover;
+    outline: none;
+    box-shadow: none;
+
 }
 
 .profile-info .img-container {
@@ -427,7 +453,7 @@ button:focus, button:active {
 .menu-page .wrapper {
     display: flex;
     column-gap: 8px;
-    margin: 16px 0;
+    margin: 30px 0;
     /*position: fixed;*/
     /*top: 60px;*/
 }
@@ -436,8 +462,18 @@ button:focus, button:active {
     width: auto;
 }
 
+.menu-page .wrapper .form-select:focus {
+    border: 1px solid var(--custom-primary);
+    box-shadow: none;
+}
+
 .menu-page .wrapper .form-control {
     width: auto;
+}
+
+.menu-page .wrapper .form-control:focus {
+    border: 1px solid var(--custom-primary);
+    box-shadow: none;
 }
 
 .menu-page #menu-list {
@@ -590,6 +626,9 @@ button:focus, button:active {
     border-radius: 10em;
     width: 30px;
     height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .horizontal-list .arrow-btn img {
