--- a/templates/menu.html
+++ b/templates/menu.html
@@ -30,7 +30,7 @@
             <option>종로구</option>
             <option>중구</option>
         </select>
-        <input class="form-control" id="search-keyword" placeholder="검색어를 입력하세요."/>
+        <input class="form-control" id="search-keyword" placeholder="검색어를 입력하세요." onkeyup="handleKey()"/>
         <button class="btn btn-primary" onclick="search()">검색</button>
     </div>
 
