--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -6,15 +6,15 @@
             <div class="profile-img-wrapper">
                 <img id="profile-img" class="profile-img" alt=""/>
             </div>
-            <label for="file-input" class="hover-element click">
+            <label for="file-input" class="hover-element click" onclick="currentPath()">
                 <img src="/static/img/icon/camera-fill.svg"/>
             </label>
         </div>
 
         <!--경로 수정해야함 / 파일 업로드 코드(display none 상태임)-->
         <!-- FIXME: 주소 변경해야함 -->
-        <form action="http://localhost:8080/fileupload" method="POST"
-              enctype="multipart/form-data">
+        <form id="file-form" action="" method="POST" enctype="multipart/form-data">
+<!--        <form action="http://localhost:8080/fileupload" method="POST" enctype="multipart/form-data">-->
             <input id="file-input" type="file" name="file" onchange="handleChangeProfileImage()"/>
             <input id="file-save-btn" type="submit" value="저장"/>
         </form>
